<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:cardBackgroundColor="@color/colorTeal"
    card_view:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="102dp">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/levolucion3"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creditos_equipo"
                android:layout_gravity="center"
                android:layout_marginBottom="3dp"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creditos_equipo_nombres"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="3dp"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creditos_fecha"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creditos_contacto"
            android:layout_gravity="center"
            android:gravity="start"
            android:layout_marginBottom="3dp"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creditos_contacto_mail"
            android:layout_gravity="center"
            android:gravity="center"
            android:autoLink="email"
            android:textColorLink="@color/colorGreen"
            android:layout_marginBottom="3dp"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creditos_contacto_web"
            android:layout_gravity="center"
            android:gravity="center"
            android:autoLink="web"
            android:textColorLink="@color/colorGreen"
            android:layout_marginBottom="3dp"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
