<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:cardBackgroundColor="@color/colorTeal"
    card_view:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="3dp"
            android:id="@+id/cw_notificacion_cabecera"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/cw_noti_cabecera"
            android:layout_alignParentTop="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
        <ImageView
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/cw_notificacion_cabecera"
            android:src="@drawable/noticia"
            android:id="@+id/cw_notificacion_imagen"
            android:scaleType="fitXY"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="3"
            android:id="@+id/cw_notificacion_titulo"
            android:layout_toRightOf="@id/cw_notificacion_imagen"
            android:layout_below="@id/cw_notificacion_cabecera"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="2dp"
            android:text="@string/cw_noti_titulo"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cw_notificacion_fecha"
            android:layout_below="@id/cw_notificacion_titulo"
            android:layout_alignParentRight="true"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="3dp"
            android:text="@string/cw_noti_publicado"
            android:textColor="@android:color/white"
            android:textSize="10sp"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>